--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="container">
             <div class="socials">
                 <a href="https://facebook.com/"><i class="uil uil-facebook-f"></i></a>
-                <a href="https://facebook.com/"><i class="uil uil-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/boluwatifesofola/"><i class="uil uil-linkedin"></i></a>
                 <a href="https://facebook.com/"><i class="uil uil-twitter"></i></a>
             </div>
 
@@ -108,8 +108,8 @@
                     </p>
                 </div>
                 <a class="read-more">Show More</a>
-                <a href="./assets/SBB PERSONAL BIO (1).docx" class="btn icon-btn btn-primary" download>Download CV<span class="material-symbols-outlined">download</span></a>
             </div>
+            <a href="./assets/SBB PERSONAL BIO (1).docx" class="btn about-btn icon-btn btn-primary" download>Download CV<span class="material-symbols-outlined">download</span></a>
         </div>
     </section>
     <!-- /*=====  End of ABOUT SECTION  ======*/ -->
@@ -127,6 +127,7 @@
                         <h4>Leadership</h4>
                     </div>
                     <span class="material-symbols-outlined">keyboard_arrow_down</span>
+                    
                 </div>
 
                 <div class="items">
@@ -417,7 +418,7 @@
 
      <!-- /*----------  TESTIMONIAL SECTION  ----------*/ -->
     <section class="testimonials">
-        <h1>testimonial</h1>
+        <h1>Testimonial</h1>
         <div class="container swiper">
             <div class="carousel swiper-wrapper">
                 <div class="testimonial swiper-slide">
@@ -535,12 +536,12 @@
             </ul>
             <div class="socials">
                 <a href="https://facebook.com/"><i class="uil uil-facebook-f"></i></a>
-                <a href="https://facebook.com/"><i class="uil uil-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/boluwatifesofola/"><i class="uil uil-linkedin"></i></a>
                 <a href="https://facebook.com/"><i class="uil uil-twitter"></i></a>
             </div>
         </div>
         <div class="copyright">
-            copyright &copy; Developed by Folawe Matthew Ogunnaike
+            copyright &copy; Designed $ Developed by <a href="#">Folawe Matthew Ogunnaike</a>
         </div>
     </footer>
 
