--- a/index.html
+++ b/index.html
@@ -426,10 +426,10 @@
                     <div class="head">
                         <div class="profile-area">
                             <div class="avater">
-                                <img src="./assets/user-profile.jpeg">
+                                <img src="./assets/IMG-20230531-WA0005.jpg">
                             </div>
                             <div class="info">
-                                <h4>Tife Tife</h4>
+                                <h4>Olamide Coal</h4>
                                 <small>Graphics Designer</small>
                             </div>
                         </div>
